# CMakeList.txt : CMake project for hangman2018, include source and define
# project specific logic here.
#
cmake_minimum_required (VERSION 3.8)

# Add source to this project's executable.
add_executable (hangman2018 "hangman2018.cpp" "hangman2018.h")

# TODO: Add tests and install targets if needed.
